css/style.css
/* ... */
.linkWrap a {
    text-decoration: none;
}

.linkWrap a:hover,
.linkWrap a:active {
    color: rgb(255, 109, 109);
    text-decoration-color: rgb(255, 109, 109);
    -moz-text-decoration-color: rgb(255, 109, 109);

}

/* ------------- Media inquiries/ Actual (Home) section  */

@media only screen and (max-width: 425px) {

    /* --------- Poster layout properties */

    .actual-content {
        max-height: 74%;
        /*controls the height of the poster content container - how much space the poster items have in height*/
        height: 100vh;
    }


    .imgWrap {
        display: block;
        width: auto;
        height: 100%;
        padding: 0 0 0 0;
    }

    .separator {
        display: block;
        width: auto;
        height: 10px;
    }

    /* --------- Poster text properties */


    .popTitle h2 u {
        font-size: 10vw;
        letter-spacing: 5px;
        margin-top: -15vw;
        max-width: 100vw;
    }


    .glitterTitle h2 u {
        font-size: 8vw;
        letter-spacing: 5px;
        margin-top: -20vw;
        max-width: 100vw;
    }


    .infoText {
        font-size: 3.4vw;
    }

    .linkWrap {
        display: block;
        margin: 0;
        padding: 0;
    }

    .linkWrap #actualLinkID,
    .linkWrap #glitterLinkID {
        font-size: 4vw;
    }

}


@media only screen and (max-width: 767px) {


    /* --------- Poster layout properties */

    .spacing-div {
        /*determines the space between the title and the content div*/
        height: 7vh;
    }

    .actual-content {
        max-height: 76%;
        /*controls the height of the poster content container - how much space the poster items have in height*/
        height: 100vh;
    }


    .separator {
        display: block;
        width: auto;
        height: 10px;
    }

    /* --------- Poster image properties */
    .imgWrap {
        display: block;
        height: 100%;
        padding: 0 0 0 0;
    }

    #popImage,
    #glitterImage {
        width: 80%;
        height: 80vw;
        margin-left: 10%;
    }


    .separator {
        height: 5vw;
    }

    /* --------- Poster text properties */


    .popTitle h2 u {
        font-size: 8vw;
        letter-spacing: 5px;
        margin-top: -15vw;
        max-width: 100vw;
        margin-left: 10%;
    }


    .glitterTitle h2 u {
        font-size: 8vw;
        letter-spacing: 5px;
        margin-top: -20vw;
        max-width: 100vw;
        margin-left: 10%;
    }


    .infoText {

        width: 80%;
        font-size: 2.3vw;
        margin-left: 10%;
    }

    .linkWrap {
        display: block;
        margin-left: 10%;
        padding: 0;
    }

    .linkWrap #actualLinkID,
    .linkWrap #glitterLinkID {
        font-size: 3vw;
    }

}


@media only screen and (min-width: 768px) {

    /*---------- Animation for bigger screens */

    .actual-content {
        display: flex;
        flex-flow: column;
        height: 100vh;
        width: 100vw;
        animation: fadein 20s;
        -webkit-animation: fadein 20s;
        animation-timing-function: cubic-bezier(.165, .84, 44, 1);
        animation-delay: 0s;
        overflow: auto;
    }

    @keyframes fadein {
        from {
            display: none;
            opacity: 0;
        }

        to {
            display: block;
            opacity: 1;
        }
    }

    /* --------- Poster layout properties */
    .spacing-div {
        /*determines the space between the title and the content div*/
        height: 24vh;
    }

    .actual-content {
        align-self: center;
        max-height: 60%;
        /*controls the height of the poster content container - how much space the poster items have in height*/
    }

    .popPoster {
        display: block;
        flex-flow: row;
        height: 100%;
        overflow-x: hidden;
        overflow-y: auto;
    }

    /* --------- Poster image properties */
    .imgWrap {
        display: block;
        width: 35vh;
        padding-left: 5vw;
    }

    #popImage {
        width: 30vw;
        height: 30vw;
    }

    #glitterImage {
        width: 30vw;
        height: 30vw;
    }

    .separator {
        height: 5vw;
    }

    /* --------- Poster text properties */


    .popTitle h2 u {
        font-size: 5vw;
        letter-spacing: 5px;
        margin-top: -7vw;
        margin-left: 3vw;
        max-width: 30vw;
    }

    .glitterTitle h2 u {
        font-size: 4.2vw;
        letter-spacing: 5px;
        margin-top: -7vw;
        max-width: 30vw;
        margin-left: 3vw;


    }

    .infoText {
        width: 50vw;
        padding-top: 2vw;
        font-size: 2.2vw;
        margin-top: 1vw;
        margin-left: 3vw;
        overflow-x: visible;
    }


    .linkWrap {
        margin-bottom: 4vw;
    }

    .linkWrap #actualLinkID,
    .linkWrap #glitterLinkID {
        font-size: 2.4vw;
    }

}



@media only screen and (min-width: 1024px) {

    .spacing-div {
        height: 15vh;
    }

    .imgWrap {
        display: block;
        width: 50vh;
        padding-left: 8vw;
    }

    #popImage {
        width: 20vw;
        height: 20vw;
    }

    #glitterImage {
        width: 20vw;
        height: 20vw;
    }

    .popTitle h2,
    .popTitle h2 {
        margin-left: -0.2vw;
    }

    .popTitle h2 u {
        font-size: 3vw;
        letter-spacing: 5px;
        margin-top: -4vw;
        max-width: 34vw;

    }

    .glitterTitle h2 u {
        font-size: 2.8vw;
        letter-spacing: 5px;
        margin-top: -4vw;
        max-width: 34vw;
    }

    .infoText {
        max-width: 42vw;
        padding-top: 2vw;
        font-size: 1.2vw;
        margin-top: 1vw;

    }

    .linkWrap {
        margin-bottom: 4vw;
    }

    .linkWrap #actualLinkID,
    .linkWrap #glitterLinkID {
        margin-right: auto;
        font-size: 1.4vw;
    }

    .separator {
        display: block;
        width: auto;
        height: 2vw;
    }
}
/* ... */

